# cmake-clang-c14-error-demo

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
scripts/: build.sh
src/: main.cpp
